--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,8 +1,5 @@
 {
-  "ChromeNotReady": {
-    "message": "Chrome is not yet fully started, please wait..."
-  },
-  "RemoveBookmark": {
-    "message": "Remove bookmark"
+  "PageNotReady": {
+    "message": "The page is not yet fully started, please wait..."
   }
 }
