--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+1.0 (released 18.07.2018)
+  * Only get favicons for http or https bookmarks, and never for
+    localhost bookmarks.
+
 0.9 (released 14.07.2018)
   * Use unofficial githubusercontent favicon cache
   * Remove menu entry to delete bookmarks
