--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+0.12 (released 01.08.2018)
+  * Only use the title hover attribute when folder or bookmark titles
+    have been length limited.
+
 0.11 (released 24.07.2018)
   * Removed feature opening bookmarks in tabs when clicking
     on folder name. Allows to drop the tabs permission.
