--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,9 @@
+0.17 (released 01.11.2018)
+  * Use non-minified libs of jquery and jquery-masonry plugin
+    to enable easy code review.
+
 0.16 (released 01.11.2018)
   * Do not try to get favicons for IP address hostnames.
-  * Use non-minified libs of jquery and jquery-masonry plugin.
 
 0.15 (released 05.08.2018)
   * Use text-overflow:ellipsis for bookmark and folder titles.
