--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+0.18 (released 21.02.2019)
+  * Don't fade out, use only fade in when replacing folder contents.
+    Makes the transition smoother.
+
 0.17 (released 01.11.2018)
   * Use non-minified libs of jquery and jquery-masonry plugin
     to enable easy code review.
