--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+0.20 (released xx.xx.2019)
+  * Updated jquery 3.3.1 -> 3.4.1
+
 0.19 (released 28.04.2019)
   * Log errors executing bookmark functions.
   * Detect and render separators. This fixes "disappearing" folders.
