--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,5 @@
-0.20 (released xx.xx.2019)
-  * Updated jquery 3.3.1 -> 3.4.1
+0.20 (released 30.06.2020)
+  * Updated jquery 3.3.1 -> 3.5.1
 
 0.19 (released 28.04.2019)
   * Log errors executing bookmark functions.
