--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,5 @@
-0.21 (released xx.xx.xxxx)
+0.21 (released 26.12.2022)
+  * Rename package to favilicios2
   * Updated jquery 3.5.1 -> 3.6.1
   * Use working favicon api from duckduckgo
 
